// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem component should apply values from theme 1`] = `
<View
  updateTheme={[Function]}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "fontSize": 17,
          }
        }
        testID="listItemTitle"
        theme={
          Object {
            "ListItem": Object {
              "title": "List Title",
            },
            "colors": Object {
              "divider": "#bcbbc1",
              "error": "#ff190c",
              "grey0": "#393e42",
              "grey1": "#43484d",
              "grey2": "#5e6977",
              "grey3": "#86939e",
              "grey4": "#bdc6cf",
              "grey5": "#e1e8ee",
              "greyOutline": "#bbb",
              "primary": "#2089dc",
              "searchBg": "#303337",
              "secondary": "#8F0CE8",
            },
          }
        }
        updateTheme={[Function]}
      >
        List Title
      </Text>
    </View>
  </View>
</View>
`;

exports[`ListItem component should render with avatar 1`] = `
<Component
  avatar={
    Object {
      "source": "avatar_uri",
    }
  }
>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "peru",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  />
</Component>
`;

exports[`ListItem component should render with left icon 1`] = `
<Component>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  >
    <Themed.Icon
      color="red"
      name="wifi"
      size={20}
      type="font-awesome"
    />
  </PadView>
</Component>
`;

exports[`ListItem component should render with left icon component 1`] = `
<Component>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      I'm left icon
    </Text>
  </PadView>
</Component>
`;

exports[`ListItem component should render with right icon component 1`] = `
<Component>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      I'm right icon
    </Text>
  </PadView>
</Component>
`;

exports[`ListItem component should render with switch 1`] = `
<Component>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderBottomWidth": 0.5,
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
        "paddingVertical": 8,
      }
    }
  >
    <Switch
      disabled={false}
      value={true}
    />
    <Themed.Icon
      color="#D1D1D6"
      name="ios-arrow-forward"
      size={16}
      type="ionicon"
    />
  </PadView>
</Component>
`;

exports[`ListItem component should render with title and subtitle 1`] = `
<Component>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  >
    <Component
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Themed.Text
        numberOfLines={5}
        style={
          Object {
            "backgroundColor": "peru",
            "fontSize": 17,
          }
        }
        testID="listItemTitle"
      >
        title test
      </Themed.Text>
      <Themed.Text
        style={
          Object {
            "backgroundColor": "peru",
            "fontSize": 15,
          }
        }
      >
        title test
      </Themed.Text>
    </Component>
    <Component
      style={
        Object {
          "alignItems": "flex-end",
          "flex": 0.5,
          "justifyContent": "center",
        }
      }
    >
      <Themed.Text
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "rgba(0, 0, 0, 0.54)",
            "fontSize": 17,
          }
        }
      >
        title
      </Themed.Text>
    </Component>
  </PadView>
</Component>
`;

exports[`ListItem component should render without issues 1`] = `
<Component>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  />
</Component>
`;
